# VFX-UsdSurvivalGuide

./: .gitignore  README.md  concepts.hipnc  docs.bat  docs.sh  setup.sh
.github/workflows/: build-and-deploy.yml  mdbook.yml
code/: test.py
code/core/: composition.py  elements.py
code/dcc/: houdini.py
code/production/: caches.py  production.py
docs/: book.toml
docs/code/: test.py
docs/src/: SUMMARY.md  chapter_1.md  contributors.md  index.md  not-found.md  notice.md  performancetracking.md  template.md
docs/src/core/: api.md  glossary.md  overview.md  resources.md
docs/src/core/composition/: arcs.md  assetpath.md  compositionLIVRPS.excalidraw  deepdive.md  fundamentals.md  houdiniCompositionReferenceEncapsulate.webm  houdiniCompositionSublayerValueClip.webm  houdiniListEditableOpsMetadata.webm  houdiniReferenceListEditableOpsLayers.webm  listeditableops.md  livrps.md  overview.md  pcp.md  relationships.md
docs/src/core/elements/: animation.md  collection.md  data_container.md  data_type.md  layer.md  loading_mechanisms.md  materials.md  metadata.md  overview.md  path.md  prim.md  property.md  schemas.md  standalone_utilities.md  transform.md
docs/src/core/plugins/: assetresolver.md  kind.md  metadata.md  notice.md  overview.md  schemas.md
docs/src/core/profiling/: debug.md  overview.md  profiling.md
docs/src/dcc/houdini/: approach.md  hda.md  overview.md  timedependency.md
docs/src/dcc/houdini/faq/: overview.md
docs/src/dcc/houdini/fx/: frustumCulling.md  frustum_culling.md  overview.md  particles.md  pointinstancers.md  rbd.md  transformspace.md  volumes.md
docs/src/dcc/houdini/general/: artist_vs_pipeline.md  overview.md  paths.md
docs/src/dcc/houdini/hda/: data_modify.md  hda.md  layers.md  order_of_operations.md  overview.md
docs/src/dcc/houdini/performance/: overview.md
docs/src/dcc/houdini/profiling/: overview.md
docs/src/introduction/: docs.md  future.md  motivation.md  overview.md  structure.md  test.py
docs/src/media/: UsdSurvivalGuide.psd
docs/src/media/core/composition/: compositionLIVRPS.excalidraw
docs/src/pages/core/: api.md  glossary.md  resources.md
docs/src/pages/core/composition/: arcs.md  fundamentals.md  listeditableops.md  livrps.md  pcp.md  pcpPrimIndex.txt  pcpPrimIndexPig.txt
docs/src/pages/core/elements/: animation.md  collection.md  data_type.md  layer.md  loading_mechanisms.md  materials.md  metadata.md  notice.md  path.md  prim.md  property.md  schemas.md  standalone_utilities.md  transform.md
docs/src/pages/core/plugins/: assetresolver.md  kind.md  metadata.md  overview.md  schemas.md
docs/src/pages/core/profiling/: debug.md  overview.md  profiling.md
docs/src/pages/dcc/: overview.md
docs/src/pages/dcc/houdini/: approach.md
docs/src/pages/introduction/: docs.md  motivation.md  structure.md
docs/src/pages/production/: composition.md  concepts.md  faq.md  prerequisites.md
docs/src/pages/production/caches/: attribute.md  boundingbox.md  collection.md  composition.md  materialbinding.md  overview.md  xform.md
docs/src/production/: caches.md  composition.md  concepts.md  faq.md  overview.md  prerequisites.md  schemas.md
docs/src/production/caches/: attribute.md  boundingbox.md  collection.md  composition.md  materialbinding.md  overview.md  primvar.md  xform.md
docs/theme/: head.hbs.bkp  header.hbs
docs/theme/ext/css/: custom.css
examples/render_attribute_modification/: pythonWrangle.py  render_attribute_modification.hipnc
files/composition/: composition.hipnc
files/composition/pixar/faq/WhenCanYouDeleteAReference/: assembly.usda  assembly_with_all_variants.usda  assets.usda  shot.usda  shot_variant_switch.usda
files/composition/pixar/glossary/inherits/: Forest.usd  Trees.usd
files/composition/pixar/glossary/references/: FlattenedMarbleCollection.usd  Marble.usd  MarbleCollection.usd
files/composition/pixar/glossary/specializes/: Robot.usd  RobotScene.usd
files/composition/usdSurvivalGuide/: .gitignore
files/composition/usdSurvivalGuide/livrps/sublayer_valueclip_cache_workflow/: set_anim_valueclip_stitch_clips.manifest.usd  set_anim_valueclip_stitch_clips.topology.usd  set_anim_valueclip_stitch_clips.usd  (+3 more)
files/dcc/houdini/: overview.hipnc
files/dcc/houdini/RBD/: RBD.hipnc
files/dcc/houdini/frustumCulling/: frustumCulling.hipnc
files/dcc/houdini/hda/: hda.hipnc
files/dcc/houdini/motionblur/: MotionBlur.hipnc
files/dcc/houdini/pointInstancer/: pointInstancer.hipnc
files/dcc/houdini/points/: points_native.hipnc  pythonWrangle.py  renderPreFrame.py  render_attribute_modification.hipnc
files/dcc/houdini/profiling/: report.json  report.trace  tracing.hipnc
files/dcc/houdini/timeSamples/: GetValueMightBeTimeVarying  timeSample.1001.usdnc  timeSample.1002.usdnc  timeSample.1003.usdnc  timeSample.1004.usdnc  timeSample.1005.usdnc  timeSample.1006.usdnc  timeSample.1007.usdnc  timeSample.1008.usdnc  timeSample.1009.usdnc  timeSample.1010.usdnc  timeSamples.hipnc  valueClip.manifest.usdnc  valueClip.topology.usdnc  valueClip.usdnc
files/dcc/houdini/transforms/: xforms.hipnc
files/dcc/houdini/variants/: variants.hipnc
files/plugins/kinds/: plugInfo.json
files/plugins/metadata/: plugInfo.json
files/plugins/schemas/: exampleSchema.usda
files/plugins/schemas/codelessSchema/: build.sh  schema.usda
files/plugins/schemas/compiledSchema/: CMakeLists.txt  build.sh
files/plugins/schemas/compiledSchema/auxiliary/: __init__.py
files/plugins/schemas/compiledSchema/src/: module.cpp  moduleDeps.cpp  wrapComplex.cpp  wrapParamsAPI.cpp  wrapSimple.cpp  wrapTokens.cpp
(+12 files in other folders)
